--- a/dashboard/pruebas.html
+++ b/dashboard/pruebas.html
@@ -54,38 +54,18 @@
 
 <body>
 
-    <div id="wrapper">
-        
-        <!-- Navigation -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <!-- Top Menu Items -->
-            <ul class="nav navbar-right top-nav">
-                <li>
-                    <a id="addDash" href="#"><i class="fa fa-fw fa-edit"></i> Add Dashboard</a>
-                </li>
-            </ul>
-            <a class="navbar-brand" style="right">Make Graphics</a>
-
-            <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul id="dashboards" class="nav navbar-nav side-nav">                    
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </nav>
-
-        <div id="page-wrapper">
-
-            <div class="container-fluid">
-                
-            </div>
-            <!-- /.container-fluid -->
-
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Creating</h3>
         </div>
-        <!-- /#page-wrapper -->
-
+        <div class="panel-body">
+            <ul>
+                <p><button type="button" class="btn btn-xs btn-default">Time series chart</button></p>
+                <p><button type="button" class="btn btn-xs btn-default">Aging chart</button></p>
+                <p><button type="button" class="btn btn-xs btn-default">Info widget</button></p>
+            </ul>
+        </div>
     </div>
-    <!-- /#wrapper -->
 
 </body>
 
