--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -60,6 +60,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
+                <li><a id="save" href="#">Save</a></li>
                 <li>
                     <a id="addDash" href="#"><i class="fa fa-fw fa-edit"></i> Add Dashboard</a>
                 </li>
