funcion sin django

--- a/dashboards/index.html
+++ b/dashboards/index.html
@@ -95,7 +95,7 @@
                     <a id="addPanel" href="javascript:void(0)"><i class="fa fa-fw fa-edit"></i> Add Panel</a>
                 </li>
             </ul>
-            <a class="navbar-brand" style="right">Make Graphics</a>
+            <input type="text" style="background: transparent; border: none; color: #929999; margin-top: 10px; margin-left: 10px;font-size:22px" value="Make Graphics" id="titleApp">
 
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
