--- a/dashboards/index.html
+++ b/dashboards/index.html
@@ -35,6 +35,10 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+        <!-- Undescore -->
+    <script src="static/js/underscore.js"></script>
+        <!-- Github -->
+    <script src="static/js/github.js"></script>
         <!-- jQuery -->
     <script src="static/js/jquery.js"></script>
 
@@ -100,7 +104,7 @@
                 </li>
             </ul>
             <input type="text" style="background: transparent; border: none; color: #929999; margin-top: 10px; margin-left: 10px;font-size:22px" value="Make Graphics" id="titleApp">
-
+            <i id="activedPanel" style="color: #929999; font-size:22px"></i>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul id="panels" class="nav navbar-nav side-nav">                    
